feat(products): harden filtering pagination and tests