@@ -5,8 +5,15 @@ import com.omnia.backend.enums.ProductStatus;
 import org.springframework.data.jpa.domain.Specification;
 
 import java.math.BigDecimal;
+import java.util.List;
+import java.util.Locale;
 
-public class ProductSpecification {
+public final class ProductSpecification {
+
+    private static final char LIKE_ESCAPE_CHARACTER = '\\';
+
+    private ProductSpecification() {
+    }
 
     public static Specification<Product> filterProducts(
             String keyword,
@@ -16,41 +23,57 @@ public class ProductSpecification {
             BigDecimal minPrice,
             BigDecimal maxPrice
     ) {
-        return Specification
-                .where(containsKeyword(keyword))
-                .and(hasCategory(categoryId))
-                .and(hasBrand(brand))
-                .and(hasStatus(status))
-                .and(priceGreaterThanOrEqual(minPrice))
-                .and(priceLessThanOrEqual(maxPrice));
+        return Specification.allOf(
+                List.of(
+                        containsKeyword(keyword),
+                        hasCategory(categoryId),
+                        hasBrand(brand),
+                        hasStatus(status),
+                        priceGreaterThanOrEqual(minPrice),
+                        priceLessThanOrEqual(maxPrice)
+                )
+        );
     }
 
-    private static Specification<Product> containsKeyword(String keyword) {
+    private static Specification<Product> containsKeyword(
+            String keyword
+    ) {
         return (root, query, criteriaBuilder) -> {
-            if (keyword == null || keyword.trim().isEmpty()) {
+            if (keyword == null || keyword.isBlank()) {
                 return criteriaBuilder.conjunction();
             }
 
-            String likePattern = "%" + keyword.toLowerCase() + "%";
+            String normalizedKeyword = keyword
+                    .trim()
+                    .toLowerCase(Locale.ROOT);
+
+            String likePattern = "%"
+                    + escapeLikePattern(normalizedKeyword)
+                    + "%";
 
             return criteriaBuilder.or(
                     criteriaBuilder.like(
                             criteriaBuilder.lower(root.get("name")),
-                            likePattern
+                            likePattern,
+                            LIKE_ESCAPE_CHARACTER
                     ),
                     criteriaBuilder.like(
                             criteriaBuilder.lower(root.get("description")),
-                            likePattern
+                            likePattern,
+                            LIKE_ESCAPE_CHARACTER
                     ),
                     criteriaBuilder.like(
                             criteriaBuilder.lower(root.get("brand")),
-                            likePattern
+                            likePattern,
+                            LIKE_ESCAPE_CHARACTER
                     )
             );
         };
     }
 
-    private static Specification<Product> hasCategory(Long categoryId) {
+    private static Specification<Product> hasCategory(
+            Long categoryId
+    ) {
         return (root, query, criteriaBuilder) -> {
             if (categoryId == null) {
                 return criteriaBuilder.conjunction();
@@ -63,30 +86,43 @@ public class ProductSpecification {
         };
     }
 
-    private static Specification<Product> hasBrand(String brand) {
+    private static Specification<Product> hasBrand(
+            String brand
+    ) {
         return (root, query, criteriaBuilder) -> {
-            if (brand == null || brand.trim().isEmpty()) {
+            if (brand == null || brand.isBlank()) {
                 return criteriaBuilder.conjunction();
             }
 
+            String normalizedBrand = brand
+                    .trim()
+                    .toLowerCase(Locale.ROOT);
+
             return criteriaBuilder.equal(
                     criteriaBuilder.lower(root.get("brand")),
-                    brand.toLowerCase()
+                    normalizedBrand
             );
         };
     }
 
-    private static Specification<Product> hasStatus(ProductStatus status) {
+    private static Specification<Product> hasStatus(
+            ProductStatus status
+    ) {
         return (root, query, criteriaBuilder) -> {
             if (status == null) {
                 return criteriaBuilder.conjunction();
             }
 
-            return criteriaBuilder.equal(root.get("status"), status);
+            return criteriaBuilder.equal(
+                    root.get("status"),
+                    status
+            );
         };
     }
 
-    private static Specification<Product> priceGreaterThanOrEqual(BigDecimal minPrice) {
+    private static Specification<Product> priceGreaterThanOrEqual(
+            BigDecimal minPrice
+    ) {
         return (root, query, criteriaBuilder) -> {
             if (minPrice == null) {
                 return criteriaBuilder.conjunction();
@@ -99,7 +135,9 @@ public class ProductSpecification {
         };
     }
 
-    private static Specification<Product> priceLessThanOrEqual(BigDecimal maxPrice) {
+    private static Specification<Product> priceLessThanOrEqual(
+            BigDecimal maxPrice
+    ) {
         return (root, query, criteriaBuilder) -> {
             if (maxPrice == null) {
                 return criteriaBuilder.conjunction();
@@ -112,6 +150,12 @@ public class ProductSpecification {
         };
     }
 
-    private ProductSpecification() {
+    private static String escapeLikePattern(
+            String value
+    ) {
+        return value
+                .replace("\\", "\\\\")
+                .replace("%", "\\%")
+                .replace("_", "\\_");
     }
 }
